@@ -1,3 +1,8 @@
+Thu Mar 21 20:38:38 1996  Richard Basch  <basch@lehman.com>
+
+	* decrypt_key.c (krb5_dbekd_decrypt_key_data): bullet-proofing the
+	code -- if the data contents are NULL, do not coredump.
+
 Mon Mar 18 21:46:39 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>
 
 	* configure.in: Add KRB5_RUN_FLAGS
